name:                hass
version:             0.1.0
homepage:            https://github.com/chrislewis/hass#readme
license:             MIT
license-file:        LICENSE
author:              Chris Lewis
maintainer:          chris@thegodcode.net
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hass
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Jvm.ClassFile, Jvm.ClassFile.ConstantPool
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring >= 0.10.8.2, containers >= 0.6.0.1
